Fixed menu on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ textarea {
     list-style: none;
     margin: 0px;
     padding: 0px;
-    width: 834px;
+    width: 838px;
     margin-left: auto;
     margin-right: auto;
 }
